# rust-main-project

./: Cargo.toml  README.md
src/: main.rs
src/db/: connect.rs
src/lib/: email.rs  environment.rs  error.rs  init.rs  routes.rs
