[package]
name = "sociality"
version = "0.1.0"
authors = ["Dimitris Kosmas-Lekkas <dkl1994@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# General
dotenv = "0.15.0"
regex = "1.5.4"
tracing = "0.1.29"
tracing-subscriber = "0.2.25"

# CLI tools
clap = "2.33.3"

# Web Framework
rocket = "0.5.0-rc.1"

# HTTP Requests
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
ureq = "2.2.0"

# Email client
lettre = "0.10.0-rc.3"
lettre_email = "0.9"

# DB
mongodb = "2.0.0"